@@ -81,5 +81,19 @@ class MenusHelper
 
 		return 'index.php?'.http_build_query($request);
 	}
+	
+	/**
+	 * Get the menu list for create a menu module
+	 *
+	 * @access 		public
+	 * @return		array  	The menu array list
+	 * @since		1.6
+	 */
+	public static function getMenuTypes() 
+	{
+		$db = JFactory::getDbo();
+		$db->setQuery('SELECT a.menutype FROM #__menu_types AS a');
+		return $db->loadResultArray();
+	}
 
 }
