@@ -30,7 +30,7 @@ class JElementMenu extends JElement
 
 	public function fetchElement($name, $value, &$node, $control_name)
 	{
-		require_once JPATH_ADMINISTRATOR.DS.'components'.DS.'com_menus'.DS.'helpers'.DS.'helper.php';
+		require_once JPATH_ADMINISTRATOR.DS.'components'.DS.'com_menus'.DS.'helpers'.DS.'menus.php';
 		$menuTypes 	= MenusHelper::getMenuTypes();
 
 		foreach ($menuTypes as $menutype) {
